fix game ending trigger for high scores, make high scores screen update when becomes visible